=================
Changes for Crate
=================

Unreleased
==========

 - Fixed a rare bug that leads to serialization issues when a ShardBulkRequest
   was serialized more than once

 - Fixed a bug that could cause imports from s3 result in an error instead of
   importing the data if the URI contained wildcards.

 - Improve performance of LIKE and Regexp queries

 - Fix: Order by ``_raw`` and/or ``_id`` did not work.

 - Fix: support compressed ``_source``

2015/09/18 0.51.4
=================

 - Fixed calculation of the EC2 discovery retry delay in order to prevent
   exceeding of the AWS API request limit.

 - Updated crate-admin to 0.14.5 which includes following changes:

   - display ``NULL`` instead of empty cell in console results table

2015/09/15 0.51.3
=================

 - Display column names that contain a dot correctly in information schema
   and result column headers

2015/09/08 0.51.2
=================

 - Updated crate-admin to 0.14.4 which includes the following changes:

   - updated Intercom to support new messaging features. The Intercom service is
     disabled if UDC is disabled on the Crate server.

 - Fixed handling of non-deterministic functions

 - Added Usage Data Collector ``udc`` column to ``sys.cluster`` table to
   indicate its configured settings.

 - Updated crash to version 0.14.0 which contains the following changes:

   - Fixed output tabular format bug which results in wrong representation
     of a string containing a floating point value.

   - Updated wording of the cluster check command output.

   - Added the check command which queries the ``sys.checks`` table for
     cluster checks

   - updated crate-python to 0.13.4

 - Fixed an issue that could kill long running queries on shards with few
   segments containing huge amounts of documents

2015/08/13 0.51.1
=================

 - Improved retry logic of EC2 unicast host discovery mechanism

 - Updated crate-admin to 0.14.3 which includes the following changes: